style: fixing truncation

--- a/src/scss/utils/_mixins.scss
+++ b/src/scss/utils/_mixins.scss
@@ -1,15 +1,7 @@
 @mixin truncate($lines: 1) {
-	@if ($lines == 1) {
-		overflow: hidden;
-		text-overflow: ellipsis;
-		white-space: nowrap;
-		overflow: hidden !important;
-		display: block;
-	} @else {
-		display: -webkit-box;
-		-webkit-line-clamp: $lines;
-		-webkit-box-orient: vertical;
-		overflow: hidden !important;
-		display: -webkit-box;
-	}
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+  overflow: hidden !important;
+  display: -webkit-box;
 }
